--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,23 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
 }
+.bubbles {
+  background: url('./img/factsolotlBubbles.png');
+  z-index: 1000;
+  background-size: cover;
+  background-repeat: repeat-y;
+}
 
+img {
+  max-width: 30vh;
+  
+}
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
