--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  z-index: -1;
+  overflow: hidden;
+
 }
 
 code {
