--- a/src/containers/search/search.css
+++ b/src/containers/search/search.css
@@ -1,4 +1,9 @@
 
-input button {
-  background-attachment: fixed;
+.search {
+  display: flex;
+  flex-flow: row;
 }
+button {
+  margin-top: 1vmax;
+}
+
