--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,11 @@
     transform: translate3d(0, -1692px, 0);
   }
 }
+
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+}
