--- a/src/containers/details/details.css
+++ b/src/containers/details/details.css
@@ -1,3 +1,9 @@
-button {
-  float: right;
+#expand {
+  position:absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
