--- a/src/containers/search/search.module.css
+++ b/src/containers/search/search.module.css
@@ -1,7 +1,6 @@
 
-.search {
-  display: flex;
-  flex-flow: row;
+button {
+ float: right;
 }
 
 .toggleSchool {
@@ -11,7 +10,7 @@
 }
 
 .footer {
-  position: absolute;
+  /* position: absolute; */
   right: 0;
   bottom: 0;
   left: 0;
