--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: url('./img/factsolotlBG.png') no-repeat center center fixed;
 
-  background-size: cover; -webkit-background-size: cover;
+  background-size: cover; 
+  -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
