--- a/src/containers/search/search.module.css
+++ b/src/containers/search/search.module.css
@@ -5,8 +5,12 @@ button {
 
 .toggleSchool {
   color: white;
+  background-color: rgb(52, 196, 76);
+  /* border-radius: 40%; */
+  padding: 5px;
   font-weight: bolder;
-  text-shadow: 2px 2px black;
+  text-shadow: 2px 2px grey;
+  box-shadow: 2px 2px grey;
 }
 
 .footer {
