--- a/src/containers/details/details.css
+++ b/src/containers/details/details.css
@@ -6,8 +6,13 @@
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+  padding-left: 5px;
 }
 
 #chevron {
   color: black;
+}
+
+.details {
+  padding: 5px;
 }
