--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  /* overflow: hidden; */
+  overflow: hidden;
 
 }
 
