--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,10 @@
 }
 
 .footer {
-  position: absolute;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
   width: 100%;
+  height: 50%
 }
