--- a/src/containers/search/search.module.css
+++ b/src/containers/search/search.module.css
@@ -3,27 +3,30 @@ button {
  float: right;
 }
 
-.toggleSchool {
+.toggleOn {
   color: white;
   background-color: rgb(52, 196, 76);
   /* border-radius: 40%; */
   padding: 5px;
+  margin: 20px;
   font-weight: bolder;
   text-shadow: 2px 2px grey;
   box-shadow: 2px 2px grey;
 }
 
-.toggleCounty {
-  padding: 20px;
+.toggleOff {
+  margin: 20px;
 }
 
-.footer {
-  /* position: absolute; */
+
+
+/* .footer {
+  position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
   padding: 1rem;
-}
+} */
 
 
 
