--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -11,6 +11,20 @@
   box-shadow: inset 0px 0px 20px 10px rgba(0,0,0,0.6);
 }
 
+#close {
+  color: red;
+}
+
+#closeBtn {
+  bottom: 0;
+  float: right;
+  width: 30px;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+  padding-left: 5px;
+}
+
 
 
 
