--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,7 @@ body {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
-  overflow: hidden;
+  overflow-x: hidden;
 
 }
 
