--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -1,7 +1,8 @@
 .nav {
   height: 13vmax;
-  /* box-shadow: 2px 2px 20px  rgb(176, 211, 222); */
   background-color:transparent;
-  margin-top:0;
+  margin-top: 20px;
 }
+
+
 
