--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -18,11 +18,19 @@
 #closeBtn {
   bottom: 0;
   float: right;
-  width: 30px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-  padding-left: 5px;
+}
+
+.card {
+  padding: 10px;
+  margin:0;
+}
+
+#detailInset {
+  box-shadow: inset 0px 0px 10px 1px rgba(175, 174, 174, 0.6);
+}
+
+.row {
+  margin: 0;
 }
 
 
