--- a/src/components/Splash/Splash.module.css
+++ b/src/components/Splash/Splash.module.css
@@ -8,7 +8,7 @@
 }
 
 .fortyTwo {
-  margin-top: 300px;
+  margin-top: 350px;
   position: absolute;
   float: left;
   font-family: 'Lilita One', cursive;
@@ -16,17 +16,21 @@
   background: rgba(255,255,255,0.2);
   border-right: solid grey 1px;
   border-left: solid grey 1px;
+  padding: 15px;
+
 
 }
 
 .content {
   font-family: 'Fira Sans', sans-serif;
   color: grey;
+  padding: 15px;
 }
 
 .content2 {
   font-family: 'Fira Sans', sans-serif;
   color: rgb(70, 70, 70);
+  padding: 15px;
 
 }
 
@@ -36,84 +40,19 @@
   font-family: 'Fira Sans', sans-serif;
   font-weight: bold;
   color: rgb(70, 70, 70);
+  padding: 15px;
 }
 
 .legend {
   float: right;
   width: 200px;
   position: absolute;
-  margin-top: 350px;
+  margin-top: 500px;
   margin-left: 1000px;
-  background: rgba(255,255,255,0.2);
+  background: rgba(255,255,255,0.4);
   border-right: solid grey 1px;
   border-left: solid grey 1px;
+  padding: 15px;
 
 }
-
-
-
-.neon {
-  position: relative;
-  overflow: hidden;
-  filter: brightness(200%);
-}
-
-.text {
-  background-color: black;
-  color: white;
-  font-size: 180px;
-  font-weight: bold;
-  font-family: sans-serif;
-  text-transform: uppercase;
-  position: relative;
-  user-select: none;
-}
-
-.text::before {
-  content: attr(dataText);
-  position: absolute;
-  color: white;
-  filter: blur(0.02em);
-  mix-blend-mode: difference;
-}
-
-.gradient {
-  position: absolute;
-  background: linear-gradient(45deg, red, gold, lightgreen, gold, red);
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  mix-blend-mode: multiply;
-}
-
-.spotlight {
-  position: absolute;
-  top: -100%;
-  left: -100%;
-  right: 0;
-  bottom: 0;
-  background: 
-      radial-gradient(
-          circle,
-          white,
-          transparent 25%
-      ) center / 25% 25%,
-      radial-gradient(
-          circle,
-          white,
-          black 25%
-      ) center / 12.5% 12.5%;
-  animation: light 5s linear infinite;
-  mix-blend-mode: color-dodge;
-}
-
-@keyframes light {
-  to {
-      transform: translate(50%, 50%);
-  }
-}
-
-
-
  
