--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -13,11 +13,15 @@
 
 #close {
   color: red;
+  float: right;
 }
 
 #closeBtn {
-  bottom: 0;
-  float: right;
+  margin-top: 5px;
+  margin-right: 5px;
+  position:absolute;
+  top:0;
+  right:0;
 }
 
 .card {
