--- a/src/components/Map/Map.module.css
+++ b/src/components/Map/Map.module.css
@@ -2,14 +2,20 @@
   width: 500px; 
   height: 500px;
   float: right;
-
 }
 
 .mapLabel {
   float: left;
   background-attachment: fixed;
-  /* position: relative; */
   margin-top: 11vmax;
   margin-left: 16vmax;
   font-size: 1.5vmax;
+}
+
+@media only screen and (max-width: 700px) {
+  .map {
+    width: 350px; 
+    height: 350px;
+    float: right;
+  }
 }
