--- a/src/containers/Splash/Splash.module.css
+++ b/src/containers/Splash/Splash.module.css
@@ -1,3 +1,5 @@
+/* any smaller than 800 wide by 800 height starts to ruin styling */
+
 
 .info{
   width: 80%;
@@ -59,4 +61,49 @@
   color: green;
   font-size: medium;
 }
+
+@media only screen and (max-width: 700px) {
+  .title {
+    font-family: 'Fira Sans', sans-serif;
+    font-weight: bold;
+    color: rgb(70, 70, 70);
+    padding: 5px;
+    font-size: 40px;
+    margin: 0;
+  }
+
+  .content2 {
+    font-family: 'Fira Sans', sans-serif;
+    color: rgb(70, 70, 70);
+    padding: 5px;
+    font-size: 20px;
+    margin: 0;
+  }
+
+  .content {
+    font-family: 'Fira Sans', sans-serif;
+    color: grey;
+    padding: 5px;
+    margin: 0;
+  }
+  .info{
+    width: 100%;
+    background: rgba(255,255,255,0.2);
+    border-right: solid grey 1px;
+    border-left: solid grey 1px;
+  }
+
+  .fortyTwo {
+    margin-top: 600px;
+    position: absolute;
+    font-family: 'Lilita One', cursive;
+    color: rgb(70, 70, 70);
+    background: rgba(255,255,255,0.2);
+    border-right: solid grey 1px;
+    border-left: solid grey 1px;
+    padding: 15px;
+    width: 80%;
+  }
+  
+  }
 
