--- a/src/components/Preview/Preview.css
+++ b/src/components/Preview/Preview.css
@@ -29,7 +29,13 @@
 }
 
 .greenBG {
-  background-color: green;
   padding: 0;
   margin: 0;
+}
+
+
+@media only screen and (max-width: 700px) {
+  .schoolPreviewName {
+    font-size: 20px;
+  }
 }
