--- a/src/containers/search/search.module.css
+++ b/src/containers/search/search.module.css
@@ -42,10 +42,6 @@ button {
   color: rgb(70, 70, 70);
 }
 
-.searchFooter {
-  font-family: 'Fira Sans', sans-serif;
-}
-
 @media only screen and (max-width: 900px) {
   .searchHeader {
     background: rgba(255,255,255,0.2);
@@ -72,11 +68,6 @@ button {
   #exceedanceTitle {
     font-size: 10px;
   }
-
-  .searchFooter {
-    font-family: 'Fira Sans', sans-serif;
-    font-size: 10px;
-  }
 }
 
 .select {
@@ -84,17 +75,65 @@ button {
   float: right;
 }
 
-
-.detailBox {
-  float: left;
-  width: 100%;
-  font-family: 'Fira Sans', sans-serif;
-  color: rgb(70, 70, 70);
-}
-
 #searchToggle {
   margin: 20px;
 }
+
+.modal { 
+  position: fixed; 
+  z-index: 1; 
+  padding-top: 100px; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  background-color: rgba(0,0,0,0.4); 
+}
+
+
+.detailBox {
+  font-family: 'Fira Sans', sans-serif;
+  color: rgb(70, 70, 70);
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 60%;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  display: flex;
+  flex-flow: column;
+  border-radius: 10px;
+}
+
+.infoBox{
+  padding: 16px;
+}
+
+@-webkit-keyframes animatetop {
+  from {top:-300px; opacity:0} 
+  to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+  from {top:-300px; opacity:0}
+  to {top:0; opacity:1}
+}
+
+#infoIcon{
+  position: absolute;
+}
+
+.spinner {
+  float: right;
+  }
+
+
+
 
 
 
